--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,61 +8,136 @@
     <link rel="icon" href="images/pint_icon.png">
     <title>{{ site.title | default: site.github.repository_name }}</title>
 		    </head>
-  <body>
+<body>
         <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
+          <img id="peak_black2" src="http://i.imgur.com/GmbHa4x.png" border="0" width="756" height="420">
+                                    <img id="peak_black" src="http://i.imgur.com/oaPRc1u.png" border="0" width="400" height="150" align="right">
           <div>
-    <p id=pint_head><img src="images/pinticon.png" border="0px" width="512px" height="400px"></p>
+            <p id="pint_title_header"><img src="http://i.imgur.com/1IITZYj.png" width="126px";></p>
           </div>
-          <div>
-            <p id="pint_title_header">NMR spectroscopy software for line shape fitting and downstream analysis</p>
+          <div id="tagText">
+            NMR spectroscopy software for line shape fitting and downstream analysis
           </div>
+
         </header>
     </div>
+    <div class="bg_black">
 <section id="main_content" class="inner2">
 <div>
+  <hr>
   <p class="PINT_title">Download PINT</p>
+  <hr> <br>
 </div>
   <div class="main-container">
   <div class="fixer-container">
 <div class="container">
-  <p class="title"><img src="images/windows_normal.png" height= "115px" width="230px"></p>
+  <p class="title"><img src="http://i.imgur.com/g8FcFZR.png" height= "115px" width="230px"></p>
   <div class="overlay"></div>
   <div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_windows_x86_64.zip"> Download </a></div>
 </div>
 <div class="container">
-  <p class="title"><img src="images/mac_normal.png" height= "115px" width="230px"></p>
+  <p class="title"><img src="http://i.imgur.com/TBIAwHw.png" height= "115px" width="230px"></p>
   <div class="overlay"></div>
   <div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_mac_x86_64.dmg"> Download </a></div>
 </div>
 <div class="container">
-  <p class="title"><img src="images/linux_normal.png" height= "115px" width="230px"></p>
+  <p class="title"><img src="http://i.imgur.com/StPpaEi.png" height= "115px" width="230px"></p>
   <div class="overlay"></div>
   <div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_linux_x86_64.tar.gz"> Download </a></div>
 </div>
 <div class="container">
-  <p class="title"><img src="images/source_normal.png" height= "115px" width="230px"></p>
+  <p class="title"><img src="http://i.imgur.com/iLzmCXG.png" height= "115px" width="230px"></p>
   <div class="overlay"></div>
   <div class="button"><a href="https://github.com/PINT-NMR/PINT/archive/v2.0.zip"> Download </a></div>
 </div>
     </div>
     </div>
-<div>
+    
+<HR COLOR="white" width="100%">
   <p class="PINT_desc">A user-friendly software for rapid and accurate analysis of NMR spectra</p>
-<p class="article">PINT (Peak INTegration) is designed to perform integration of peaks in NMR spectra. The program is easy to use, yet powerful enough to handle complicated spectra. Peaks are integrated by fitting predefined line shapes to experimental data and the fitting can be customized to deal with heavily overlapped peaks. The results can be inspected graphically, which facilitates systematic optimization of the line shape fitting. The integrated peak volumes can be used to extract parameters such as relaxation rates and information about low populated states.<br><br>
-PINT v2.0 is based on a graphical user interface and contains all necessary tools to render and interact with spectra and automatically generate plots. Comprehensible video tutorials and a user manual are accessed from within the software. PINT is compiled for 64-bit versions of Windows, Linux and Mac OS X.</p>
+  <HR COLOR="white" width="100%">
+  <div class="clearfix">
+  <div class="floatLeft">
+<p class="article"> Analysis of NMR spectroscopy data can be difficult and often require a battery of scripts and software.
+PINT is a software designed to make the analysis simple, streamlined and precise.<br>
+PINT offers rapid integration of spectra and can be used to perform downstream analysis of a multitude of experiments, including R1, R1rho, CPMG and NOE.
+Visualize and work with your spectra in both 2D and 3D. <br><br>
+</p>
+  </div>
+    <div id="slideshow">
+   <div>
+<img src="http://i.imgur.com/EdxfeXz.png" width="500px">
+   </div>
+   <div>
+<img src="http://i.imgur.com/nhWAJNt.png" width="500px">
+   </div>
 </div>
-</section>
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
+  </div>
+    <hr>
+    <p id="middleText">PINT supports both NMRpipe and TopSpin processed spectra</p>
+    <hr>
+      <div class="clearfix">
+  <div class="floatRight">
+<p class="article2">The integration is simple to perform yet allows for extensive customization, catering to both basic and advanced users.<br>Both line shape and curve fitting are incredibly quick and often done within seconds to minutes.<br>
+Integrate a single spectrum or setup an arrayed analysis of hundreds of spectra.<br> Your choice, your way. <br><br>
+</p>
+  </div>
+    <div id="slideshow2">
+   <div>
+<img src="http://i.imgur.com/7WQRzhQ.png" width="500px">
+   </div>
+   <div>
+<img src="http://i.imgur.com/jQii2ah.png" width="500px">
+   </div>
+</div>
+  </div>
+        <hr>
+    <p id="middleText">Analyzing overlapping peaks has never before been this simple</p>
+    <hr>
+    <div class="clearfix">
+  <div class="floatLeft">
+<p class="article"> Easily analyze overlapping peaks and extract individual parameters.<br><br>Dealing with tricky peaks? Modify the analysis to reach convergence using simple syntax.<br><br>Everything PINT has to offer is included in video tutorials and a comprehensible user manual.<br><br>
+</p>
+  </div>
+    <div id="slideshow3">
+      <div>
+        <img src="http://i.imgur.com/DNukppr.png" width="500px">
+        </div>
+   <div>
+<img src="http://i.imgur.com/qxXcleg.png" width="500px">
+   </div>
+</div>
+  </div>
+           <hr>
+    <p id="middleText">PINT will plot all fitted functions and parameters</p>
+    <hr>
+    <div class="clearfix">
+  <div class="floatRight">
+<p class="article"> PINT will minimize the time you spend analyzing your data both through its streamlined workflow and the automatic generation of plots.<br>Data from all of the plotted files can be used as input with your personal favorite plotting tool.<br><br>
+</p>
+  </div>
+    <div id="floatLeft">
+      <div>
+        <img src="http://i.imgur.com/k49WBd4.png" width="500px">
+        </div>
+</div>
+  </div>
+    <hr>
+          <!-- FOOTER  -->
+    <div id="footCenter">
+      <p>Programmers: Markus Niklasson and Patrik Lundström</p>
+      <p>Report bugs to: <a href="mailto:marni@ifm.liu.se" target="_top">marni@ifm.liu.se</a> or <a href="mailto:patlu@ifm.liu.se" target="_top">patlu@ifm.liu.se</a></p>
+      <p>Address correspondence to: <a href="mailto:patlu@ifm.liu.se" target="_top">patlu@ifm.liu.se</a></p>
         {% if site.github.is_project_page %}
         <p class="copyright">{{ site.title | default: site.github.repository_name }} maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
+    </div>
+  </div>
+</section>
     </div>
 </body>
 </html>
