--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <meta name="description" content="{{ site.title | default: site.github.repository_name }} : {{ site.description | default: site.github.project_tagline }}">
     <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
     <link rel="icon" href="images/pint_icon.png">
+    <script type="text/javascript" src="{{site.baseurl}}/js/main.js"></script>
     <title>{{ site.title | default: site.github.repository_name }}</title>
 		    </head>
 <body>
