--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@ setInterval(function() {
     </div>
     
 <HR COLOR="white" width="100%">
-  <p class="PINT_desc">A user-friendly software for rapid and accurate analysis of NMR spectra</p>
+  <p id="middleText">A user-friendly software for rapid and accurate analysis of NMR spectra</p>
   <HR COLOR="white" width="100%">
   <div class="clearfix">
   <div class="floatLeft">
