--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,37 +7,7 @@
 		<link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
 		<link rel="icon" href="images/pint_icon.png">
 		<title>{{ site.title | default: site.github.repository_name }}</title>
-		<script>
-			$("#slideshow > div:gt(0)").hide();
-			
-			setInterval(function() { 
-				$('#slideshow > div:first')
-					.fadeOut(1000)
-					.next()
-					.fadeIn(1000)
-					.end()
-					.appendTo('#slideshow');
-			},  3000);
-			
-			$("#slideshow2 > div:gt(0)").hide();
-			setInterval(function() { 
-				$('#slideshow2 > div:first')
-					.fadeOut(1000)
-					.next()
-					.fadeIn(1000)
-					.end()
-					.appendTo('#slideshow2');
-			},  3000);
-			$("#slideshow3 > div:gt(0)").hide();
-			setInterval(function() { 
-				$('#slideshow3 > div:first')
-					.fadeOut(1000)
-					.next()
-					.fadeIn(1000)
-					.end()
-					.appendTo('#slideshow3');
-			},  3000);
-		</script>
+		<script type="text/javascript" src="{{site.baseurl}}/js/main.js"></script>
 	</head>
 <body>
 	<!-- HEADER -->
