--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
 		<link rel="icon" href="images/pint_icon.png">
 		<title>{{ site.title | default: site.github.repository_name }}</title>
+		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 		<script type="text/javascript" src="{{site.baseurl}}/js/main.js"></script>
 	</head>
 <body>
