--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
 						<div class="floatLeft">
 							<p class="article"> Analysis of NMR spectroscopy data can be difficult and often require a battery of scripts and software.
 								PINT is a software designed to make the analysis simple, streamlined and precise.<br>
-								PINT offers rapid integration of spectra and can be used to perform downstream analysis of a multitude of experiments, including R1, R1rho, CPMG and NOE.
+								PINT offers rapid integration of spectra and can be used to perform downstream analysis of a multitude of experiments, including R1, R2, NOE and CPMG relaxation dispersion.
 								Visualize and work with your spectra in both 2D and 3D. <br><br>
 							</p>
 						</div>
