--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,7 +99,7 @@
 					<hr>
 					<div class="clearfix">
 						<div class="floatLeft">
-							<p class="article"> Easily analyze overlapping peaks and extract individual parameters.<br><br>Dealing with tricky peaks? Modify the analysis to reach convergence using simple syntax.<br><br>Everything PINT has to offer is included in video tutorials and a comprehensible user manual.<br><br>
+							<p class="article"> Easily analyze overlapping peaks and extract individual parameters.<br><br>Dealing with tricky peaks? Modify the analysis to reach convergence using simple syntax.<br><br>Everything PINT has to offer is described in video tutorials and a comprehensible user manual.<br><br>
 							</p>
 						</div>
 						<div id="slideshow3">
