--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 		<section id="main_content" class="inner2">
 			<div>
 				<hr>
-				<p class="PINT_title">Download PINT</p>
+				<p class="PINT_title">Download PINT (version 2.0)</p>
 				<hr> <br>
 			</div>
 			<div class="main-container">
