--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,6 +128,8 @@
 					<hr>
 					<!-- FOOTER  -->
 					<div id="footCenter">
+						<p>Citation: A manuscript is currently awaiting publication.</p>
+						<p>During this time, please cite the <a href="https://www.ncbi.nlm.nih.gov/pubmed/23657843" target="_top">legacy version.</a></p>
 						<p>Programmers: Markus Niklasson and Patrik Lundström</p>
 						<p>Report bugs to: <a href="mailto:marni@ifm.liu.se" target="_top">marni@ifm.liu.se</a> or <a href="mailto:patlu@ifm.liu.se" target="_top">patlu@ifm.liu.se</a></p>
 						<p>Address correspondence to: <a href="mailto:patlu@ifm.liu.se" target="_top">patlu@ifm.liu.se</a></p>
