--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 		<section id="main_content" class="inner2">
 			<div>
 				<hr>
-				<p class="PINT_title">Download PINT (version 2.0)</p>
+				<p class="PINT_title">Download PINT (version 2.0.1)</p>
 				<hr> <br>
 			</div>
 			<div class="main-container">
@@ -37,22 +37,22 @@
 					<div class="container">
 						<p class="title"><img src="http://i.imgur.com/g8FcFZR.png" height= "115px" width="230px"></p>
 						<div class="overlay"></div>
-						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_windows_x86_64.zip"> Download </a></div>
+						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.1/PINT_v2_01_windows_x86_64.zip"> Download </a></div>
 					</div>
 					<div class="container">
 						<p class="title"><img src="http://i.imgur.com/TBIAwHw.png" height= "115px" width="230px"></p>
 						<div class="overlay"></div>
-						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_mac_x86_64.dmg"> Download </a></div>
+						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.1/PINT_v2_01_mac_x86_64.dmg"> Download </a></div>
 					</div>
 					<div class="container">
 						<p class="title"><img src="http://i.imgur.com/StPpaEi.png" height= "115px" width="230px"></p>
 						<div class="overlay"></div>
-						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0/PINT_v2_linux_x86_64.tar.gz"> Download </a></div>
+						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.1/PINT_v2_01_linux_x86_64.tar.gz"> Download </a></div>
 					</div>
 					<div class="container">
 						<p class="title"><img src="http://i.imgur.com/iLzmCXG.png" height= "115px" width="230px"></p>
 						<div class="overlay"></div>
-						<div class="button"><a href="https://github.com/PINT-NMR/PINT/archive/v2.0.zip"> Download </a></div>
+						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.1/source_code.zip"> Download </a></div>
 					</div>
 				</div>
 			</div>			
