--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
 					<div class="container">
 						<p class="title"><img src="http://i.imgur.com/iLzmCXG.png" height= "115px" width="230px"></p>
 						<div class="overlay"></div>
-						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.2/source_code.zip"> Download </a></div>
+						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.2/SOURCE_CODE.Cross.platform.zip"> Download </a></div>
 					</div>
 				</div>
 			</div>			
