--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 		<section id="main_content" class="inner2">
 			<div>
 				<hr>
-				<p class="PINT_title">Download PINT (v2.0.2)</p>
+				<p class="PINT_title">Download PINT (v2.0.3) - Last updated 16/6 - 2017</p>
 				<hr> <br>
 			</div>
 			<div class="main-container">
@@ -37,22 +37,22 @@
 					<div class="container">
 						<p class="title"><img src="http://i.imgur.com/g8FcFZR.png" height= "115px" width="230px"></p>
 						<div class="overlay"></div>
-						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.2/PINT_v2_02_windows_x86_64.zip"> Download </a></div>
+						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.3/PINT_v2_03_windows_x86_64.zip"> Download </a></div>
 					</div>
 					<div class="container">
 						<p class="title"><img src="http://i.imgur.com/TBIAwHw.png" height= "115px" width="230px"></p>
 						<div class="overlay"></div>
-						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.2/PINT_v2_02_mac_x86_64.dmg"> Download </a></div>
+						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.3/PINT_v2_03_macOS_x86_64.dmg"> Download </a></div>
 					</div>
 					<div class="container">
 						<p class="title"><img src="http://i.imgur.com/StPpaEi.png" height= "115px" width="230px"></p>
 						<div class="overlay"></div>
-						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.2/PINT_v2_02_linux_x86_64.tar.gz"> Download </a></div>
+						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.3/PINT_v2_03_linux_x86_64.tar.gz"> Download </a></div>
 					</div>
 					<div class="container">
 						<p class="title"><img src="http://i.imgur.com/iLzmCXG.png" height= "115px" width="230px"></p>
 						<div class="overlay"></div>
-						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.2/SOURCE_CODE_v2_02.zip"> Download </a></div>
+						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.3/SOURCE_CODE_v2_03.zip"> Download </a></div>
 					</div>
 				</div>
 			</div>			
