--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 		<section id="main_content" class="inner2">
 			<div>
 				<hr>
-				<p class="PINT_title">Download PINT (v2.0.3) - Last updated 16/6 - 2017</p>
+				<p class="PINT_title">Download PINT (v2.0.3)</p>
 				<hr> <br>
 			</div>
 			<div class="main-container">
