--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 					<div class="container">
 						<p class="title"><img src="http://i.imgur.com/StPpaEi.png" height= "115px" width="230px"></p>
 						<div class="overlay"></div>
-						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.4/PINT_v2_04_linux_x86_64.tar.gz"> Download </a></div>
+						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.4/PINT_v2_04_linux_x86_64.gz"> Download </a></div>
 					</div>
 					<div class="container">
 						<p class="title"><img src="http://i.imgur.com/iLzmCXG.png" height= "115px" width="230px"></p>
