--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 		<section id="main_content" class="inner2">
 			<div>
 				<hr>
-				<p class="PINT_title">Download PINT (v2.0.4)</p>
+				<p class="PINT_title">Download PINT (v2.0.5)</p>
 				<hr> <br>
 			</div>
 			<div class="main-container">
@@ -37,22 +37,22 @@
 					<div class="container">
 						<p class="title"><img src="http://i.imgur.com/g8FcFZR.png" height= "115px" width="230px"></p>
 						<div class="overlay"></div>
-						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.4/PINT_v2_04_windows_x86_64.zip"> Download </a></div>
+						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.5/PINT_v2_05_windows_x86_64.zip"> Download </a></div>
 					</div>
 					<div class="container">
 						<p class="title"><img src="http://i.imgur.com/TBIAwHw.png" height= "115px" width="230px"></p>
 						<div class="overlay"></div>
-						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.4/PINT_v2_04_macOS_x86_64.dmg"> Download </a></div>
+						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.5/PINT_v2_05_macOS_x86_64.dmg"> Download </a></div>
 					</div>
 					<div class="container">
 						<p class="title"><img src="http://i.imgur.com/StPpaEi.png" height= "115px" width="230px"></p>
 						<div class="overlay"></div>
-						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.4/PINT_v2_04_linux_x86_64.gz"> Download </a></div>
+						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.5/PINT_v2_05_linux_x86_64.tar.gz"> Download </a></div>
 					</div>
 					<div class="container">
 						<p class="title"><img src="http://i.imgur.com/iLzmCXG.png" height= "115px" width="230px"></p>
 						<div class="overlay"></div>
-						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.4/SOURCE_CODE_v2_04.zip"> Download </a></div>
+						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.5/SOURCE_CODE_v2_05.zip"> Download </a></div>
 					</div>
 				</div>
 			</div>			
