--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,11 @@
 				<p class="PINT_title">Download PINT (v2.0.5)</p>
 				<hr> <br>
 			</div>
+			<div>
+				<hr>
+				<p class="PINT_title">Cite PINT <a href="https://link.springer.com/article/10.1007/s10858-017-0141-6">Paper I</a> <a href="https://link.springer.com/article/10.1007%2Fs10858-013-9737-7">Paper II</a></p>
+				<hr> <br>
+			</div>
 			<div class="main-container">
 				<div class="fixer-container">
 					<div class="container">
@@ -128,8 +133,6 @@
 					<hr>
 					<!-- FOOTER  -->
 					<div id="footCenter">
-						<p>Citation: A manuscript is currently awaiting publication.</p>
-						<p>During this time, please cite the <a href="https://www.ncbi.nlm.nih.gov/pubmed/23657843" target="_top">legacy version.</a></p>
 						<p>Programmers: Markus Niklasson and Patrik Lundström</p>
 						<p>Report bugs to: <a href="mailto:marni@ifm.liu.se" target="_top">marni@ifm.liu.se</a> or <a href="mailto:patlu@ifm.liu.se" target="_top">patlu@ifm.liu.se</a></p>
 						<p>Address correspondence to: <a href="mailto:patlu@ifm.liu.se" target="_top">patlu@ifm.liu.se</a></p>
