--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,11 +32,6 @@
 				<p class="PINT_title">Download PINT (v2.0.5)</p>
 				<hr> <br>
 			</div>
-			<div>
-				<hr>
-				<p class="PINT_title">Cite PINT <a href="https://link.springer.com/article/10.1007/s10858-017-0141-6">Paper I</a> <a href="https://link.springer.com/article/10.1007%2Fs10858-013-9737-7">Paper II</a></p>
-				<hr> <br>
-			</div>
 			<div class="main-container">
 				<div class="fixer-container">
 					<div class="container">
@@ -60,7 +55,12 @@
 						<div class="button"><a href="https://github.com/PINT-NMR/PINT/releases/download/v2.0.5/PINT_v2_05_source_code.zip"> Download </a></div>
 					</div>
 				</div>
-			</div>			
+			</div>
+			<div>
+				<hr>
+				<p class="PINT_title">Cite PINT: <a href="https://link.springer.com/article/10.1007/s10858-017-0141-6">Paper I (2017)</a> <a href="https://link.springer.com/article/10.1007%2Fs10858-013-9737-7">Paper II (2013)</a></p>
+				<hr> <br>
+			</div>
 			<hr COLOR="white" width="100%">
 			<p id="middleText">A user-friendly software for rapid and accurate analysis of NMR spectra</p>
 			<hr COLOR="white" width="100%">
