--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,9 +57,9 @@
 				</div>
 			</div>
 			<div>
-				<hr>
-				<p class="PINT_title">Cite PINT: <a href="https://link.springer.com/article/10.1007/s10858-017-0141-6">Paper I (2017)</a> <a href="https://link.springer.com/article/10.1007%2Fs10858-013-9737-7">Paper II (2013)</a></p>
-				<hr> <br>
+				<hr COLOR="white" width="100%">
+				<p id="middleText">Cite PINT: &nbsp; <a href="https://link.springer.com/article/10.1007/s10858-017-0141-6">Paper I (2017)</a> &nbsp; <a href="https://link.springer.com/article/10.1007%2Fs10858-013-9737-7">Paper II (2013)</a></p>
+				<hr COLOR="white" width="100%"><br>
 			</div>
 			<hr COLOR="white" width="100%">
 			<p id="middleText">A user-friendly software for rapid and accurate analysis of NMR spectra</p>
